# AdventOfCode2024

./: README.md  languageRandomiser.sh
day1/: problem1main.py  problem2main.py  solution.py  tests.py
day1/solution/: calc_distance.py  calc_simularity.py  common.py
day2/: Cargo.toml
day2/src/: main.rs  solutions.rs
day3/: .gitignore  settings.gradle.kts
day3/app/: .gitignore  build.gradle.kts
day3/app/src/main/kotlin/org/adventofcode/day3/: Main.kt  Solution.kt
day3/app/src/test/java/org/example/app/: MyTest.kt
day3/app/src/test/kotlin/org/adventofcode/day3/: Day3Test.kt
day4/: problem1main.py  problem2main.py  solution.py  tests.py
day5/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
day5/inc/: Solution.h
day5/src/: SolutionsImpl.cpp  main.cpp
day5/tests/: day5Tests.cpp
day6/: Gemfile  Rakefile
day6/src/: day6main.rb  solution.rb
day6/test/: day6test.rb
day7/: Cargo.toml
day7/src/: main.rs  solution.rs
day8/: .clang-tidy  .gitignore  CMakeLists.txt
day8/inc/: solution.h
day8/src/: SolutionsImpl.cpp  main.cpp
day8/tests/: day8Tests.cpp
utils/python/: inputreader.py
utils/rust/: Cargo.toml
utils/rust/src/: lib.rs
